--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 
-.search-element{
-    margin: 0;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%); 
+.search-element{   
+    text-align: center;
+    padding-top: 12%;
+    position: relative;
+}
+
+body {
+    margin: 10px 50px 20px 0;
 }
 
 .logo{
@@ -19,19 +21,39 @@
     border-radius: 25px;     
 }
 
+.search-bar input[type=text]{
+    border-radius: 30px; 
+    height: 45px;
+    border: solid 1px
+}
+
 .search-bar input[type=text]:hover{
     box-shadow: 5px 2px 2px gray;
-    border-radius: 5px;   
+}
+
+.search-bar input[type=text]:active{
+    box-shadow: 5px 2px 2px gray;
 }
 
 .submit-buttons{
     padding: 10px;
 }
 
+input[type=button]{
+    border: none;
+}
+
+input[type=button]:hover{
+    border: 2px;
+    border-radius: 25px;
+}
+
 ul{
     list-style-type: none;
     margin: 0;
-    padding: 0;  
+    padding: 10px;
+    font-family: arial, sans-serif;
+    font-size: 13px;
 }
 
 li {
@@ -42,7 +64,6 @@ li a {
     color: #000;
     padding: 8px 16px;
     text-decoration: none;
-    /* background-color: grey; */
   }
 
 li a:hover{
